# icecanvas

./: .gitattributes  .gitignore  INSTALL-ICECanvas.cmd  LICENSE  README.md  index.html  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tests/: verify_test.canvas
ui/: app.js  bootstrap.js  canvas-crop.js  canvas-present.js  canvas-vector.js  index.html  init.js  styles.css  tauri-bridge.js
