[package]
name = "ice-canvas"
version = "0.2.5"
description = "ICE Canvas"
authors = ["ICE Canvas"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
rfd = "0.15"
time = "=0.3.44"
base64 = "0.22"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
